2010-01-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py:
	Improve user message about suspicious codebook rights.

2010-01-22  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/form/inputfield.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/presentation/spec.py:
	Specify runtime_arguments in Fields, not CodebookSpecs.

2010-01-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Add `pg_catalog' to default schemas.

2010-01-22  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add titles to all columns in DMP specifications.

2010-01-22  Milan Zamazal  <pdm@brailcom.org>

	* NEWS:
	NEWS entry added.

2010-01-21  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Handle name spaces in db view locking.

2010-01-18  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Support schema identification for db functions.

2010-01-18  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Cache table schemas by actual table names, don't assume they are always the same.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/configuration.py:
	New configuration option dbschemas.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbdata.py:
	Consider schemas in connection pool caching.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Add usage warning to PostgreSQLAccessor._postgresql_initialize_connection.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	Cosmetic change in db schemas tests.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Make sure search_path setting SQL command is applied only when needed.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/dbdata.py:
	* lib/pytis/data/postgresql.py:
	Search_path support in DB interface.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>
